# AZgame

./: .clangd  .gitignore  AZTank_Colab_Trainer.ipynb  CMakeLists.txt  README.md  bot.cpp  bridge_main.cpp  bullet.cpp  bullet.h  constants.h  game.cpp  game.h  gamemap.cpp  gamemap.h  init.cpp  item.cpp  lib.h  main.cpp  map.cpp  portal.cpp  portal.h  readme.md  render.cpp  renderer.cpp  rl_env_wrapper.cpp  tank.cpp  tank.h  ui.cpp  ui.h  world.cpp
.conda/.condatmp/: 02125362-be9b-4a66-b83f-1346d8b672a8  144794f1-e428-4543-8b04-790006e568f5  20f78d48-b477-4104-b95c-66476b32e1a0  4572f60c-7e82-4376-bc83-ac3c6441dbc5  7d255007-f875-4234-b925-da6e5573d153  9a8514fc-17fe-4c82-aebd-b2def8d8ce2c  d07155c6-6570-4282-9347-cc220cdad3c1
agents/: Phase1_Basic_log.csv  Phase2_Wanderer_log.csv  Phase3_Fighter_log.csv  Phase4_SniperBoss_log.csv
include/: Constants.h  bot.h  bullet.h  game.h  item.h  map.h  renderer.h  tank.h  ui.h
python/: astar_controller.py  astar_env.py  astar_planner.py  astar_shell.py
src/: gymnasium_wrapper_colab.py  play_game.py  pure_python_env.py  train_ai_colab.py
train/: Curriculum.h  Fitness.h  train.cpp
train_AI/: bot.py  gymnasium_wrapper.py  pure_python_env.py  test_env.py  train_ai.py  train_ai_colab.py
train_AI/logs/PPO_1/: events.out.tfevents.1776070648.LAPTOP-7BCQNR4V.18488.0
